--- a/The-Resort/css/Styles.css
+++ b/The-Resort/css/Styles.css
@@ -68,15 +68,111 @@ body {
 li  {
   font-size: 22px;
 }
-/*
-.banner{
-width:620px;
-height: 100px;
-margin:7px auto;
--moz-box-shadow: 0 1px 3px rgba(255, 239, 69, 1.29);
--webkit-box-shadow: 0 1px 3px rgba(255, 239, 69, 1.29);
--moz-border-radius: 15px;
--webkit-border-radius: 15px;
-padding-left:190px;
+
+p4 {
+  font-family: cursive; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px;
 }
-*/
+
+/* addons //////////////////////////////////////////////*/
+
+.aboutme {
+ font-style: italic;
+}
+
+
+img.main {
+ align: center;
+}
+
+.important {
+ color: red;
+}
+
+.unimportant {
+ color: blue;
+}
+
+.my-class {
+ margin: 12px;
+ border: 2px solid blue;
+ padding: 4px;
+ clear: both;
+font-style: italic;
+}
+
+.container {
+   margin-left: auto;
+   padding-left: 5px;
+   padding-right: 5px;
+   border: 5px
+
+ }
+
+ .container2 {
+   margin-left: auto;
+   padding-left: 15px;
+   padding-right: 15px;
+   background-color: #ACF4D2;
+   border: 5px solid #ccc;
+   border-radius: 4px;
+   }
+
+   .container3 {
+     margin-left: auto;
+     padding-left: 5px;
+     padding-right: 5px;
+     background-color: #DC61A3;
+     border: 5px solid #ccc;
+     border-radius: 4px;
+     }
+
+     .container4 {
+       margin: auto;
+       max-width:1175px;
+       padding-left: 15px;
+       padding-right: 15px;
+       background-color: #EF5DBA;
+       border: 5px solid #ccc;
+       border-radius: 4px;
+       }
+
+   .column {
+ width: 660px;
+ float: center;
+ border: 2px solid purple;
+ padding: 4px;
+ margin: 3px;
+
+}
+
+.column2 {
+width: 440px;
+float: left;
+border: 5px solid violet;
+padding: 4px;
+margin: 3px;
+}
+
+.column3 {
+width: 440px;
+float: left;
+border: 5px
+padding: 4px;
+margin: 3px;
+}
+
+.column4 {
+width: 160px;
+float: right;
+align: right;
+border: 2px solid teal;
+clear: both;
+}
+
+
+
+.row::after {
+ content: "";
+ clear: both;
+ display: table;
+}
