--- a/The-Resort/css/Styles.css
+++ b/The-Resort/css/Styles.css
@@ -12,7 +12,7 @@ h2 {
 h3 {
   color: yellow;
   text-align: center;
-  text-shadow: 2px 2px 4px #000000;
+  text-shadow: 3px 3px 6px #000000;
 }
 
 p {
@@ -40,6 +40,9 @@ body {
 
  img {
   border-color: white;
+  align: center;
+  border-radius: 50%;
+  box-shadow: 3px 3px 6px #000000;
  }
 
  u {
@@ -62,6 +65,7 @@ body {
 
  col {
   display: table-column;
+  box-shadow: 3px 3px 6px #000000;
 
 }
 
@@ -71,6 +75,10 @@ li  {
 
 p4 {
   font-family: cursive; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px;
+}
+
+table {
+  box-shadow: 3px 3px 6px #000000;
 }
 
 /* addons //////////////////////////////////////////////*/
@@ -101,10 +109,14 @@ font-style: italic;
 }
 
 .container {
-   margin-left: auto;
+   float: center;
    padding-left: 5px;
    padding-right: 5px;
-   border: 5px
+   background-color: #5DEFB5;
+   border: 5px;
+   margin: 20px;
+   box-shadow: 3px 3px 6px #000000;
+   border: 5px solid gold;
 
  }
 
@@ -134,11 +146,14 @@ font-style: italic;
        background-color: #EF5DBA;
        border: 5px solid #ccc;
        border-radius: 4px;
+       box-shadow: 3px 3px 6px #000000;
+
        }
 
    .column {
  width: 660px;
  float: center;
+ align: center;
  border: 2px solid purple;
  padding: 4px;
  margin: 3px;
@@ -164,9 +179,9 @@ margin: 3px;
 .column4 {
 width: 160px;
 float: right;
-align: right;
+/*align: right;*/
 border: 2px solid teal;
-clear: both;
+
 }
 
 
